# NoScope

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY_AUDIT.md  SPEC.md  pyproject.toml  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: cli-calculator.md  hello-flask.md  static-portfolio.md  todo-api.md
noscope/: __init__.py  agents.py  capabilities.py  cli.py  deadline.py  orchestrator.py  phases.py  supervisor.py
noscope/config/: settings.py
noscope/llm/: __init__.py  base.py
noscope/llm/providers/: anthropic.py  openai.py
noscope/logging/: events.py
noscope/planning/: models.py  planner.py
noscope/spec/: contract.py  models.py  parser.py
noscope/tools/: base.py  dispatcher.py  docker.py  filesystem.py  git.py  redaction.py  safety.py  shell.py
noscope/ui/: console.py  tui.py
tests/: conftest.py  test_agents.py  test_capabilities.py  test_cli.py  test_contract.py  test_deadline.py  test_event_logging.py  test_orchestrator.py  test_phases.py  test_planner.py  test_redaction.py  test_settings.py  test_spec_parser.py
tests/test_llm/: test_providers.py
tests/test_tools/: test_dispatcher.py  test_filesystem.py  test_git.py  test_safety.py  test_shell.py
