[project]
name = "noscope"
version = "0.1.0"
description = "Time-boxed autonomous agent orchestration tool that builds runnable software MVPs from written specs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "ideksec" },
]
keywords = ["ai", "agent", "llm", "autonomous", "orchestration", "mvp", "timebox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer[all]",
    "rich",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-dotenv",
    "pyyaml",
    "anthropic",
    "openai",
    "python-frontmatter",
]

[project.urls]
Homepage = "https://github.com/ideksec/NoScope"
Repository = "https://github.com/ideksec/NoScope"
Issues = "https://github.com/ideksec/NoScope/issues"

[project.optional-dependencies]
tui = ["textual>=1.0"]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy", "pytest-cov"]

[project.scripts]
noscope = "noscope.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["frontmatter.*", "anthropic.*", "openai.*"]
ignore_missing_imports = true
